# mipyfive

./: .gitignore  CMakeLists.txt  README.md  cli.py  setup.py
core/: alu.py  alu.sby  regfile.py
examples/common/: debounce.py  ram.py  ssegdriver.py  uart.py
examples/smol/: README.md  smol.py  smol_firmware.c  smol_firmware.ld  test_smol.py
mipyfive/: alu.py  compare.py  controller.py  core.py  forward.py  hazard.py  immgen.py  lsu.py  pipereg.py  ram.py  regfile.py  types.py  utils.py
mipyfive/memory/: ram.py
mipyfive/peripherals/: ram.py
tests/: alu_formal.py  alu_unit.py  programs.py  regfile_unit.py  test_alu.py  test_compare.py  test_controller.py  test_core.py  test_forward.py  test_hazard.py  test_immgen.py  test_lsu.py  test_pipereg.py  test_ram.py  test_regfile.py  utils.py
